-Console: rewritten PdfSplit to keep file annotations
-Console: added -overwrite option to every pdfTool
-Console: new merge type using PdfCopyFields to deal with forms 
-Console: rewritten helper class TmpFileNameGenerator
-Console: refactor of the pdfTools
-Encrypt: added overwrite checkbox
-Split: added overwrite checkbox
-Merge: check to use -copyfields console option 
-Split, Merge, Encrypt, AlternateMix, Cover Footer: added JHelpLabel to have help tooltips 

1.2.0e beta
===================================
-Console: fix split page numbers starting from 1 and code cleaning
-Encrypt: permissions checks enabled/disabled based on the encrypt angorithm chosen
-Fixed scroll bars for plugins
-Fixed install script

1.2.0e alpha
===================================
-Console: added xml input file -l option for merge
-Console: rewrote commands handler
-Console: added PdfEncrypt
-Console: added PdfAlternateMix
-Encrypt: added Encrypt plugin
-AlternateMix: added AlternateMix plugin
-Cover Footer: added Cover and Footer plugin
-Merge: print style page selection (Es. 1,3-6,11,13)
-Added save and load environment
-Added Settings section
-XMLParser and XMLConfig rebuilt using dom4j
-Completely new MainGUI
-Fixed log panel caret position (by Aniket Dutta)
-Added configuration singleton
-plugin interface and abstract class Rewritten
-Added plugs panels icons
-Console: fix bug #1641683
-Merge: fix when automatically extension in destination file is set
-New icons set
-dom4j 1.6.1
-jaxen 1.1
-iText 1.4.8
-looks 2.1.1

0.6 stable release
===================================
-Console: fixed a bug if no -u option given
-Added German and Russian languages
-iText 1.4.4

0.6 beta 1
===================================
-Split: output files name now have leading zero(s) for better sorting
-Split: modified "split at this page" in "split after these pages"
-Split: now splitting a pdf file has its own thread. A progress bar shows the work done
-Split&Merge: better format for log messages