@@ -3,8 +3,8 @@
 <pdfsam> 
   <info> 
     <name>PDF Split and Merge enanched</name>  
-    <version>1.3.0e beta</version>  
-    <build_date>25 May 2007</build_date>  
+    <version>1.3.0e beta 1</version>  
+    <build_date>31 May 2007</build_date>  
     <language>Java(TM) 2 SDK, Standard Edition, Version 1.4.2</language> 
   </info>  
   <settings> 
