@@ -2,13 +2,13 @@
 
 ; HM NIS Edit Wizard helper defines
 !define PRODUCT_NAME "pdfsam"
-!define PRODUCT_VERSION "1.2.0e beta"
+!define PRODUCT_VERSION "1.3.0e beta"
 !define PRODUCT_PUBLISHER "Andrea Vacondio"
 !define PRODUCT_UNINST_KEY "Software\Microsoft\Windows\CurrentVersion\Uninstall\${PRODUCT_NAME}"
 !define PRODUCT_UNINST_ROOT_KEY "HKLM"
 !define PRODUCT_STARTMENU_REGVAL "NSIS:StartMenuDir"
 !define TARGET_FILE "config.xml"
-!define PRODUCT_DATE "30/03/2007"
+!define PRODUCT_DATE "31/05/2007"
 !define LANGUAGE_TITLE "pdfsam language selection"
 SetCompressor lzma
 
@@ -60,7 +60,7 @@ var ICONS_GROUP
 ; MUI end ------
 
 Name "${PRODUCT_NAME} ${PRODUCT_VERSION}"
-OutFile "pdfsam-win32inst-v1_2_0e-beta.exe"
+OutFile "pdfsam-win32inst-v1_3_0e-beta.exe"
 InstallDir "$PROGRAMFILES\pdfsam"
 ShowInstDetails show
 ShowUnInstDetails show
@@ -263,36 +263,36 @@ endFileExist:
 
   SetOverwrite on
   SetOutPath "$INSTDIR\lib"
-  File "lib\pdfsam-console-0.7.1e.jar"
+  File "lib\pdfsam-console-0.8.0e.jar"
   File "lib\jcmdline-1.0.3.jar"
   File "lib\looks-2.1.1.jar"
-  File "lib\itext-1.4.8.jar"
+  File "lib\itext-2.0.2.jar"
   File "lib\pdfsam-langpack.jar"
   File "lib\dom4j-1.6.1.jar"
   File "lib\jaxen-1.1.jar"    
   SetOverwrite ifnewer
   SetOutPath "$INSTDIR"
-  File "pdfsam-1.2.0e-beta.jar"
+  File "pdfsam-1.3.0e-beta.jar"
   File "pdfsam-starter.exe"
   SetOutPath "$INSTDIR\doc"
   File "doc\readme.txt"
   File "doc\changelog.txt"
   File "doc\License.txt"
-  File "doc\pdfsam-1.2.0e-alpha-tutorial.pdf"
+  File "doc\pdfsam-1.3.0e-beta-tutorial.pdf"
   SetOutPath "$INSTDIR\plugins\merge"
-  File "plugins\merge\pdfsam-merge-0.4.7e.jar"
+  File "plugins\merge\pdfsam-merge-0.4.9e.jar"
   File "plugins\merge\config.xml"
   SetOutPath "$INSTDIR\plugins\split"
-  File "plugins\split\pdfsam-split-0.2.9e.jar"
+  File "plugins\split\pdfsam-split-0.3.0e.jar"
   File "plugins\split\config.xml"
   SetOutPath "$INSTDIR\plugins\cover"
-  File "plugins\cover\pdfsam-cover-0.1.4e.jar"
+  File "plugins\cover\pdfsam-cover-0.1.5e.jar"
   File "plugins\cover\config.xml"
   SetOutPath "$INSTDIR\plugins\encrypt"
-  File "plugins\encrypt\pdfsam-encrypt-0.1.4e.jar"
+  File "plugins\encrypt\pdfsam-encrypt-0.1.5e.jar"
   File "plugins\encrypt\config.xml"
   SetOutPath "$INSTDIR\plugins\mix"
-  File "plugins\mix\pdfsam-mix-0.0.6e.jar"
+  File "plugins\mix\pdfsam-mix-0.0.7e.jar"
   File "plugins\mix\config.xml"
   SetOutPath "$SMPROGRAMS\$ICONS_GROUP"
 SectionEnd
@@ -303,7 +303,7 @@ Section -AdditionalIcons
   CreateDirectory "$SMPROGRAMS\$ICONS_GROUP"
   CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\pdfsam.lnk" "$INSTDIR\pdfsam-starter.exe"
   CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Readme.lnk" "$INSTDIR\doc\readme.txt"
-  CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Tutorial.lnk" "$INSTDIR\doc\pdfsam-1.2.0e-alpha-tutorial.pdf"
+  CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Tutorial.lnk" "$INSTDIR\doc\pdfsam-1.3.0e-beta-tutorial.pdf"
   CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Uninstall.lnk" "$INSTDIR\uninst.exe"
   !insertmacro MUI_STARTMENU_WRITE_END
 SectionEnd
@@ -331,26 +331,26 @@ Section Uninstall
   !insertmacro MUI_STARTMENU_GETFOLDER "Application" $ICONS_GROUP
   Delete "$INSTDIR\uninst.exe"
   Delete "$INSTDIR\plugins\split\config.xml"
-  Delete "$INSTDIR\plugins\split\pdfsam-split-0.2.9e.jar"
+  Delete "$INSTDIR\plugins\split\pdfsam-split-0.3.0e.jar"
   Delete "$INSTDIR\plugins\merge\config.xml"
-  Delete "$INSTDIR\plugins\merge\pdfsam-merge-0.4.7e.jar"
+  Delete "$INSTDIR\plugins\merge\pdfsam-merge-0.4.9e.jar"
   Delete "$INSTDIR\plugins\merge\config.xml"
-  Delete "$INSTDIR\plugins\encrypt\pdfsam-encrypt-0.1.4e.jar"
+  Delete "$INSTDIR\plugins\encrypt\pdfsam-encrypt-0.1.5e.jar"
   Delete "$INSTDIR\plugins\encrypt\config.xml"
-  Delete "$INSTDIR\plugins\mix\pdfsam-mix-0.0.6e.jar"
+  Delete "$INSTDIR\plugins\mix\pdfsam-mix-0.0.7e.jar"
   Delete "$INSTDIR\plugins\mix\config.xml"
-  Delete "$INSTDIR\plugins\cover\pdfsam-cover-0.1.4e.jar"
+  Delete "$INSTDIR\plugins\cover\pdfsam-cover-0.1.5e.jar"
   Delete "$INSTDIR\plugins\cover\config.xml"
-  Delete "$INSTDIR\pdfsam-1.2.0e-beta.jar"
+  Delete "$INSTDIR\pdfsam-1.3.0e-beta.jar"
   Delete "$INSTDIR\pdfsam-starter.exe"
   Delete "$INSTDIR\doc\readme.txt"
   Delete "$INSTDIR\doc\changelog.txt"
   Delete "$INSTDIR\doc\License.txt"
-  Delete "$INSTDIR\doc\pdfsam-1.2.0e-alpha-tutorial.pdf"  
-  Delete "$INSTDIR\lib\pdfsam-console-0.7.1e.jar"
+  Delete "$INSTDIR\doc\pdfsam-1.3.0e-beta-tutorial.pdf"  
+  Delete "$INSTDIR\lib\pdfsam-console-0.8.0e.jar"
   Delete "$INSTDIR\lib\jcmdline-1.0.3.jar"
   Delete "$INSTDIR\lib\looks-2.1.1.jar"
-  Delete "$INSTDIR\lib\itext-1.4.8.jar"
+  Delete "$INSTDIR\lib\itext-2.0.2.jar"
   Delete "$INSTDIR\lib\pdfsam-langpack.jar"
   Delete "$INSTDIR\lib\dom4j-1.6.1.jar"
   Delete "$INSTDIR\lib\jaxen-1.1.jar"
